--- a/search_app/templates/product_confirm_delete.html
+++ b/search_app/templates/product_confirm_delete.html
@@ -9,13 +9,12 @@ alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head> 
 <body> 
  <div class="container mt-5"> 
-  <h2>{{ product.name }}を削除しますか？</h2> 
-  <form method="POST"> 
-  {% csrf_token %} 
-  <button type="submit" class="btn btn-danger">削除</button> 
-  <a href="{% url 'product_detail' product.pk %}" class="btn btn-secondary">キ
-ャンセル</a> 
-  </form> 
+    <h2>{{ product.name }}を削除しますか？</h2> 
+    <form method="POST"> 
+    {% csrf_token %} 
+    <button type="submit" class="btn btn-danger">削除</button> 
+    <a href="{% url 'search_app:product_detail' product.pk %}" class="btn btn-secondary">キャンセル</a> 
+    </form> 
  </div> 
 </body> 
 </html>
