--- a/search_app/templates/product_detail.html
+++ b/search_app/templates/product_detail.html
@@ -2,35 +2,175 @@
 {% load humanize %}
 {% load static %}
 {% block body %}
-<!DOCTYPE html>
-<html lang="ja">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>商品詳細</title>
-
-<link rel="stylesheet" href="{% static 'css/reset.css' %}">
-<link rel="stylesheet" href="{% static 'css/detail.css' %}">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>商品詳細</title>
+    <link rel="stylesheet" href="{% static 'css/reset.css' %}">
+    <link rel="stylesheet" href="{% static 'css/detail.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
-    <img src="{% static 'img/土星、木星のアイコン.png' %}" class="image1">
-    <img src="{% static 'img/火星人のフリーイラスト2.png' %}" class="image2">
     <div class="boxs1">
         <div class="box"></div>
-        <div class="card-body">
-            <h2 class="card-title">{{ product.name }}</h2>
-            <p class="card-text">{{ product.description }}</p>
-            <p class="card-text"><strong>{{ product.price|floatformat:0|intcomma }}円</strong></p>
-            
-            <!-- ボタンの配置 -->
-            <div class="buttons">
-                <a href="{% url 'product_update' product.pk %}" class="btn btn-secondary">編集</a>
-                <button type="submit" class="btn btn-danger">削除</button>
-                    <form action="{% url 'product_delete' product.pk %}" method="POST" onsubmit="return confirm('本当に削除しますか?');">
-                    {% csrf_token %}
-                    </form>
-
-                <!-- <a href="{% url 'product_list' %}" class="btn btn-primary">商品一覧に戻る</a>  -->
+        <div class="goods_body">
+            <div id="productImagesCarousel" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    {% if product.images.all %}
+                        {% for image in product.images.all %}
+                            <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                                <img class="d-block w-100" src="{{ image.image.url }}" alt="{{ product.name }}">
+                            </div>
+                        {% endfor %}
+                    {% else %}
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="{% static 'img/noImg.jpg' %}" alt="Default Image">
+                        </div>
+                    {% endif %}
+                </div>
+                <a class="carousel-control-prev" href="#productImagesCarousel" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">前へ</span>
+                </a>
+                <a class="carousel-control-next" href="#productImagesCarousel" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">次へ</span>
+                </a>
+            </div>
+            <div class="goods_inner">
+                <h2 class="goods_title">{{ product.name }}</h2>
+                <p class="goods_text">{{ product.description }}</p>
+                <p class="goods_text"><strong>¥{{ product.price|floatformat:0|intcomma }}</strong></p>
             </div>
         </div>
+        {% if request.user.is_authenticated %}
+        <div class="fixed_btn">
+            <form id="addToCartForm" action="{% url 'search_app:add_to_cart' product.pk %}" method="POST">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-primary">カートに入れる</button>
+            </form>
+            <form id="favoriteForm" action="{% url 'search_app:favorite_product' product.pk %}" method="POST">
+                {% csrf_token %}
+                <button type="submit" class="btn favorite-btn">
+                    <i id="favoriteIcon" class="{% if is_favorited %} fas fa-heart favorited{% else %} far fa-heart {% endif %}"></i>
+                </button>
+            </form>
+        </div>
+        {% endif %}
     </div>
+
+    <!-- モーダルのHTML -->
+    <div id="cartModal" class="modal" style="display:none;"> <!-- ここにstyle属性を追加 -->
+        <div class="modal-content">
+            <span class="close" id="closeModal">&times;</span>
+            <p>カートに追加しました。</p>
+            <a href="{% url 'search_app:view_cart' %}" class="btn btn-secondary cart_btn">カートを見る</a>
+        </div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            // ページが読み込まれたときにセッションストレージをチェックして即座にモーダルを非表示にする
+            if (sessionStorage.getItem('cartModalDisplayed') === 'true') {
+                $("#cartModal").hide();
+                sessionStorage.removeItem('cartModalDisplayed');
+            }
+
+            const $favoriteForm = $("#favoriteForm");
+            $favoriteForm.on("submit", function(event) {
+                event.preventDefault();
+
+                $.ajax({
+                    type: "POST",
+                    url: $favoriteForm.attr("action"),
+                    data: $favoriteForm.serialize(),
+                    success: function(response) {
+                        const $favoriteIcon = $("#favoriteIcon");
+                        if (response.is_favorited) {
+                            $favoriteIcon.removeClass("far fa-heart");
+                            $favoriteIcon.addClass("fas fa-heart favorited");
+                        } else {
+                            $favoriteIcon.removeClass("fas fa-heart favorited");
+                            $favoriteIcon.addClass("far fa-heart");
+                        }
+                    }
+                });
+            });
+
+            const $addToCartForm = $("#addToCartForm");
+            $addToCartForm.on("submit", function(event) {
+                event.preventDefault();
+
+                $.ajax({
+                    type: "POST",
+                    url: $addToCartForm.attr("action"),
+                    data: $addToCartForm.serialize(),
+                    success: function(response) {
+                        // モーダルを表示
+                        sessionStorage.setItem('cartModalDisplayed', 'true');
+                        $("#cartModal").fadeIn();
+                    }
+                });
+            });
+
+            $("#closeModal").on("click", function() {
+                $("#cartModal").fadeOut();
+            });
+
+            $(window).on("click", function(event) {
+                if ($(event.target).is("#cartModal")) {
+                    $("#cartModal").fadeOut();
+                }
+            });
+        });
+    </script>
+    <style>
+        /* モーダルスタイル */
+        .modal {
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0,0,0,0.4);
+        }
+
+        .modal-content {
+            background-color: #fff;
+            margin: 15% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            max-width: 500px;
+            text-align: center;
+        }
+
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        .cart_btn {
+            color: #888;
+        }
+
+        div#menu-toggle {
+            display: none!important;
+        }
+    </style>
+</body>
+</html>
 {% endblock body %}
