--- a/search_app/templates/product_list.html
+++ b/search_app/templates/product_list.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% load humanize %}
+{% load static %}
+{% block body %}
 
 <!DOCTYPE html> 
 <html lang="ja"> 
@@ -14,18 +16,33 @@
   <div class="container mt-5"> 
     <h1 class="text-center mb-4">商品一覧</h1> 
       <!-- 商品リスト --> 
-      <ul class="list-group">
+      <ul class="search_result">
       {% for product in products %} 
         <li class="list-group-item d-flex justify-content-between align-items-center"> 
           <div> 
             <h5>{{ product.name }}</h5> 
-            <p>{{ product.price|floatformat:0|intcomma }}円</p> 
+            
+            <div class="carousel-inner">
+              {% if product.images.all %}
+                  {% for image in product.images.all %}
+                      <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                          <img class="d-block w-100" src="{{ image.image.url }}" alt="{{ product.name }}">
+                      </div>
+                  {% endfor %}
+              {% else %}
+                  <div class="carousel-item active">
+                      <img class="d-block w-100" src="{% static 'img/noImg.jpg' %}" alt="Default Image">
+                  </div>
+              {% endif %}
+          </div>
+
+            <p>¥{{ product.price|floatformat:0|intcomma }}</p> 
           </div> 
   <div> 
-  <!-- 編集ボタン --> 
-  <a href="{% url 'product_detail' product.id %}" class="btn btn-primary me-2">詳細</a> 
-    <!-- 削除ボタン --> 
-    <form action="{% url 'product_delete' product.id %}" method="POST" style="display:inline;" onsubmit="return confirm('本当に削除しますか？');"> 
+  <!-- 詳細ボタン --> 
+  <a href="{% url 'search_app:product_detail' product.id %}" class="btn btn-primary me-2">詳細</a> 
+  <!-- 削除ボタン --> 
+    <form action="{% url 'search_app:product_delete' product.id %}" method="POST" style="display:inline;" onsubmit="return confirm('本当に削除しますか？');"> 
     {% csrf_token %} 
       <button type="submit" class="btn btn-danger">削除</button> 
     </form> 
@@ -38,7 +55,7 @@
  
         <!-- 最初の画面に戻るボタン --> 
         <div class="mt-4 text-center"> 
-            <a href="{% url 'search_view' %}" class="btn btn-secondary">最初の画面に戻る</a> 
+            <a href="{% url 'search_app:search_view' %}" class="btn btn-secondary">最初の画面に戻る</a> 
         </div> 
     </div> 
  
@@ -46,3 +63,5 @@
     <script  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script> 
 </body> 
 </html>
+
+{% endblock body %}
