--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,34 +1,55 @@
 button {
     background: white;
     border: solid 1px #AE8D84;
-    color: #AE8D84;
+    color: #7a615a;
+}
+html {
+    height: 100vh;
 }
 
 body {
     font-family: Arial, sans-serif;
-    background: #FDEDCB;
+    background: #fdf9f8;
     margin: 0;
+    color: #7a615a!important;
 }
 
 header {
     position: relative;
     padding: 10px;
-    background-color: #FCCF74;
-    color: white;
+    background-color: #f9c5b8;
     display: flex;
 }
 
 header a {
     display: flex;
     align-items: center;
+    margin: auto 1%;
+    width: 3%;
+    color: white!important;
+}
+
+header a img {
+    width: 24px;
 }
 
 a {
     font-style: none;
     text-decoration: none;
-    color: white;
+    color: #7a615a;
 }
 
+h3 {
+    margin: 0!important;
+}
+
+h4 {
+    margin: 0;
+}
+
+h2{
+    font-size: 2vw;
+}
 .hamburger-menu {
     cursor: pointer; 
     display: flex;
@@ -36,54 +57,44 @@ a {
     flex-direction: row-reverse;
 }
 
-#menu {
-    display: none;
-    flex-direction: column;
-    background-color: white;
-    position: absolute;
-    right: 0;
-    width: 30%;
-    text-align: center;
-    top: 0;
-    height: 100vh;
-    color: #AE8D84;
-    border: solid 2px;
+/* モーダルのスタイル */
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1000; /* z-index を設定して、他の要素よりも前に表示 */
+    left: 0; 
+    top: 0; 
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+    display: flex; /* フレックスボックスを使用 */
+    justify-content: center; /* 水平中央寄せ */
+    align-items: center; /* 垂直中央寄せ */
 }
 
-#menu input {
-    margin: 10px 0;
-    padding: 10px;
-    width: 80%;
-    font-size: 16px;
+.modal-content {
+    background-color: #fefefe;
+    padding: 20px; 
+    border: 1px solid #888; 
+    width: 80%; 
+    max-width: 500px; 
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
 }
 
-#menu ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
 }
 
-#menu ul li {
-    padding: 10px;
-}
-
-#menu ul li a {
-    color: white;
+.close:hover,
+.close:focus {
+    color: black;
     text-decoration: none;
-}
-
-#menu ul li a:hover {
-    background-color: #575757;
-}
-
-#close-menu {
-    width: 8%;
-    margin: 0 0 0 auto;
-    padding: 20px;
-}
-
-div#close-menu img {
-    width: 100%;
+    cursor: pointer;
 }
 
 .search_contents {
@@ -106,16 +117,17 @@ select, #id_query {
 }
 
 ul.search_result{
-    list-style: none;
-}
-
-ul.search_result li {
-    background: white;
-    margin: 1vw auto;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+    list-style-type: none;
+    padding: 0;
+    margin: 30px auto 0 auto;
     width: 80%;
-    padding: 3vw;
-    color:black
 }
+/* .search_body ul li {
+    width: 20%;
+} */
 
 ul.search_result li:hover {
     opacity: 0.7;
@@ -130,6 +142,3 @@ section.search_body {
     height: 90vh;
 }
 
-a.btn.btn-secondary {
-    margin: auto 1.5%;
-}
